--- a/makeopts.in
+++ b/makeopts.in
@@ -4,6 +4,11 @@
 # $Id$
 #
 # $Log$
+# Revision 1.11  1998/07/05 12:20:02  KB
+# wxMessageView works and handles mime (segfault on deletion)
+# wsIconManager loads files
+# install target
+#
 # Revision 1.10  1998/06/14 12:23:57  KB
 # started to move wxFolderView to be a panel, Python improvements
 #
@@ -100,13 +105,17 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 
 # Directory in which to install scripts.
-#bindir = @bindir@
+BINDIR = @bindir@
 
 # Directory in which to install library files.
-datadir = @datadir@
+DATADIR = @datadir@/M
 
 # Directory in which to install documentation info files.
-infodir = @infodir@
+INFODIR = @infodir@/M
+
+# where to install docs
+DOCDIR = $(DATADIR)/doc
+
 
 X_CFLAGS = @X_CFLAGS@
 X_LIBS = @X_LIBS@
