--- a/configure.in
+++ b/configure.in
@@ -406,7 +406,9 @@ if test "$USE_WXGTK" = 1; then
       CHECK_INCLUDE="$CHECK_INCLUDE $ac_path_to_include"
       WX_LINK="$WX_LINK $ac_path_to_link -lgtk -lgdk -lglib -lXext"
       WX_SLINK="$WX_SLINK $ac_path_to_link -lgtk -lgdk -lglib -lXext"
-      WX_INCLUDE="$WX_INCLUDE $ac_path_to_include/gtk"
+      WX_INCLUDE="$WX_INCLUDE $ac_path_to_include $ac_path_to_include/gtk $ac_path_to_include/gdk $ac_path_to_include/glib"
+      tmp=`echo $ac_path_to_link/glib/include | sed "1,$ s/-L/-I/g"`
+      WX_INCLUDE="$WX_INCLUDE $tmp"
       AC_MSG_RESULT(yes)
     else
       AC_MSG_RESULT(no)
