--- a/include/Makefile
+++ b/include/Makefile
@@ -14,9 +14,12 @@ clean:
 dep depend:
 
 doc:
-	#$(MKDIR) $(DOCDIR)/$(CWD)
-	$(DXX) $(DXXHFLAGS) docxx.h #$(HDR)
-	$(DXX) $(DXXTFLAGS) docxx.h #$(HDR)
+	$(DOCHTML) *.h
+	$(DOCTEX) *.h
+
+#$(MKDIR) $(DOCDIR)/$(CWD)
+#$(DXX) $(DXXHFLAGS) docxx.h #$(HDR)
+#$(DXX) $(DXXTFLAGS) docxx.h #$(HDR)
 
 doc2:
 	for i in *.h ; do $(DXX) -f -k -u -k $(DXXTBL) -H -t -o $(DOCDIR)/$$i.tex $$i ; done
