removed wxLogFrame from Makefile

--- a/src/gui/Makefile
+++ b/src/gui/Makefile
@@ -2,8 +2,7 @@
 
 CWD = gui
 SRC = wxMApp.cpp wxMFrame.cpp wxFolderView.cpp wxMessageView.cpp \
-wxComposeView.cpp wxMainFrame.cpp \
-wxIconManager.cpp wxFontManager.cpp wxMDialogs.cpp wxMLogFrame.cpp \
+wxComposeView.cpp wxMainFrame.cpp wxIconManager.cpp wxFontManager.cpp wxMDialogs.cpp  \
 wxAdbEdit.cpp wxlwindow.cpp wxllist.cpp wxlparser.cpp
 
 ifdef USE_WXTAB
