--- a/makeopts.in
+++ b/makeopts.in
@@ -20,7 +20,7 @@ ICONDIR=$(BUILDDIR)/src/icons
 
 #gettext:
 
-EXTRALIBS=@LIBINTL_LINK@ @COMPFACE_LINK@ @EXTRA_LINK@
+EXTRALIBS=@LIBINTL_LINK@ @COMPFACE_LINK@ @LIBDL_LINK@ @EXTRA_LINK@ 
 
 # compiler flags
 OPT = @OPTFLAGS@
