minor fixes, kbList change

--- a/makeopts.in
+++ b/makeopts.in
@@ -33,7 +33,7 @@ GUI_DEFS=@WX_DEFS@
 
 
 
-PYTHON_LINK = @PYTHON_LINK@ @LIBDL_LINK@
+PYTHON_LINK = @PYTHON_LINK@
 PYTHON_INCLUDE = @PYTHON_INCLUDE@ 
 
 # this will be set or unset
