--- a/include/Makefile
+++ b/include/Makefile
@@ -28,7 +28,7 @@ doc:
 #$(DXX) $(DXXTFLAGS) docxx.h #$(HDR)
 
 doc2:
-	for i in *.h ; do $(DXX) -f -k -u -k $(DXXTBL) -H -t -o $(DOCDIR)/$$i.tex $$i ; done
+	for i in *.h ; do $(DXX) -f -k -u -k $(DXXTBL) -H -t -o $(BUILDDIR)/doc/classes/$$i.tex $$i ; done
 
 .PHONY: clean doc doc2 dep all install
 
