--- a/src/classes/Makefile
+++ b/src/classes/Makefile
@@ -1,7 +1,7 @@
 # Makefile for src/classes directory
 
 CWD = classes
-SRC = CommonBase.cpp MApplication.cpp appconf.cpp PathFinder.cpp Profile.cpp MimeList.cpp MimeTypes.cpp \
+SRC = CommonBase.cpp MObject.cpp MApplication.cpp appconf.cpp PathFinder.cpp Profile.cpp MimeList.cpp MimeTypes.cpp \
 Adb.cpp XFace.cpp kbList.cpp # Script.cpp
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
