--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@
 
 CWD = src
 SUB_DIRS = util classes gui mail adb
-MOBJS=util/*.o classes/*.o gui/*.o  mail/*.o 
+MOBJS=util/*.o classes/*.o gui/*.o  mail/*.o adb/*.o
 
 include ../makeopts
 
