compiles and runs on wxGTK again

--- a/src/classes/Makefile
+++ b/src/classes/Makefile
@@ -2,7 +2,7 @@
 
 CWD = classes
 SRC = CommonBase.cpp MObject.cpp MApplication.cpp appconf.cpp PathFinder.cpp Profile.cpp MimeList.cpp MimeTypes.cpp \
-Adb.cpp XFace.cpp kbList.cpp # Script.cpp
+XFace.cpp kbList.cpp # Script.cpp
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
 
