--- a/src/gui/Makefile
+++ b/src/gui/Makefile
@@ -3,7 +3,7 @@
 CWD = gui
 SRC = wxMApp.cpp wxMFrame.cpp wxFolderView.cpp wxMessageView.cpp \
 wxComposeView.cpp wxMainFrame.cpp wxIconManager.cpp wxFontManager.cpp wxMDialogs.cpp  \
-wxAdbEdit.cpp wxlwindow.cpp wxllist.cpp wxlparser.cpp wxMenuDefs.cpp
+wxlwindow.cpp wxllist.cpp wxlparser.cpp wxMenuDefs.cpp
 
 ifdef USE_WXTAB
 SRC += wxtab.cpp
