--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -1,7 +1,7 @@
 # Makefile for src/adb directory
 
 CWD = adb
-SRC = AdbFrame.cpp AdbManager.cpp ProvFC.cpp
+SRC = AdbFrame.cpp AdbManager.cpp ProvFC.cpp AdbProvider.cpp
 
 ifdef DEBUG
 SRC += ProvDummy.cpp
