works under wxGTK - only problem adbframe

--- a/src/Python/Makefile
+++ b/src/Python/Makefile
@@ -6,21 +6,21 @@
 CWD = Python
 
 SWIGSRC = MAppBase.i MailFolder.i String.i Profile.i Message.i
-CXXSRC = InitPython.cpp PythonHelp.cpp
+CPPSRC = InitPython.cpp PythonHelp.cpp
 SRC=$(CXXSRC) *.cpp
 
-CXXTARGETS= $(CXXSRC:.cpp=.o)
-SWIGTARGETS = $(SWIGSRC:.i=.o) $(SWIGSRC:.i=.py)
-SOTARGETS	=$(OTARGETS:.o=cmodule.so)
+CPPTARGETS = $(SWIGSRC:.i=.cpp) 
+OBJECTS    = $(CPPTARGETS:.cpp=.o) $(CPPSRC:.cpp=.o)
 
-all:	$(CXXTARGETS) $(SWIGTARGETS)
+
+all:	$(OBJECTS)
 
 .PHONY: mkswig all
 
 include ../../makerules 
 include ../../makeopts
 clean:
-	$(RM) *.o *.so *.pyc *.py *.doc
+	$(RM) *.o *.so *.pyc *.py *.doc $(CPPTARGETS)
 	ln -s INIT/Minit.py .
 
 #%.py: %.i
