1) toolbars are now created with AddToolbarButtons() function from wxMenuDefs.h 2) a crash in AdbFrame when opening book corrected 3) compile fixes after fixing conflicts

--- a/src/classes/Makefile
+++ b/src/classes/Makefile
@@ -1,7 +1,7 @@
 # Makefile for src/classes directory
 
 CWD = classes
-SRC = CommonBase.cpp MObject.cpp MApplication.cpp appconf.cpp PathFinder.cpp Profile.cpp MimeList.cpp MimeTypes.cpp \
+SRC = CommonBase.cpp MObject.cpp MApplication.cpp PathFinder.cpp Profile.cpp MimeList.cpp MimeTypes.cpp \
 XFace.cpp kbList.cpp # Script.cpp
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
