--- a/configure.in
+++ b/configure.in
@@ -148,13 +148,14 @@ DEFAULT_USE_WXSTRING=1
 DEFAULT_USE_WXCONFIG=1
 DEFAULT_USE_APPCONF=0
 DEFAULT_USE_EFENCE=0
-DEFAULT_USE_DMALLOC=0
+DEFAULT_USE_DMALLOC=1
 DEFAULT_USE_DEBUG=1
 DEFAULT_USE_DOCXX=0
 DEFAULT_USE_KDOC=1
-DEFAULT_USE_SHADOW=1
+DEFAULT_USE_SHADOW=0
 DEFAULT_USE_OLDLIBC=0
 DEFAULT_USE_LIBINTL=0
+DEFAULT_USE_THREADS=1
 
 MAKE_USE_WXTAB="USE_WXTAB=1"
 
